force-app/main/default/objects/APF_Document__c/APF_Document__c.object-meta.xml
<CustomObject>
    <label>APF Document</label>
    <nameField>
        <displayFormat>APF-{0000000}</displayFormat>
        <label>APF Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APF Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>