force-app/main/default/objects/APF_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Document</fullName>
            </value>
            <value>
                <fullName>Legal Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>