force-app/main/default/objects/APF_Document__c/fields/Legal_Document__c.field-meta.xml
<CustomField>
    <fullName>Legal_Document__c</fullName>
    <label>Legal Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copy of Development agreement by which the Builder acquired the Development Rights</fullName>
            </value>
            <value>
                <fullName>Copy of Power of Attorney given by the Land Owner</fullName>
            </value>
            <value>
                <fullName>All the copies of previous title chain agreements</fullName>
            </value>
            <value>
                <fullName>Latest Property Card / 7/12 extract (not more than 6 months old)</fullName>
            </value>
            <value>
                <fullName>Title certificate issued by the Builder&apos;s Lawyer</fullName>
            </value>
            <value>
                <fullName>ROC search if the Builder is a private limited company</fullName>
            </value>
            <value>
                <fullName>Copy of NA order if the land is agricultural land</fullName>
            </value>
            <value>
                <fullName>Copy of ULC order passed by the Collector</fullName>
            </value>
            <value>
                <fullName>Zone certificate shall be required (may be residential/commercial/industrial/IT)</fullName>
            </value>
            <value>
                <fullName>IOD (Intimation of Disapproval)</fullName>
            </value>
            <value>
                <fullName>Commencement Certificate</fullName>
            </value>
            <value>
                <fullName>Environmental clearance certificate</fullName>
            </value>
            <value>
                <fullName>The requisite NOC/permissions from MHADA, CIDCO, MMRDA, Collector as per the transaction and if the land is leasehold land of these authorities</fullName>
            </value>
            <value>
                <fullName>In JVPD transactions, need to see whether the parent society has granted redevelopment permission</fullName>
            </value>
            <value>
                <fullName>Pollution Control Board permission</fullName>
            </value>
            <value>
                <fullName>Fire Brigade Department Permission</fullName>
            </value>
            <value>
                <fullName>Permission of Airport Authority of India if the height of the building exceeds prescribed limits (varies by area)</fullName>
            </value>
            <value>
                <fullName>Sanctioned plans approved by the respective Municipal Corporation</fullName>
            </value>
            <value>
                <fullName>If it is an SRA project, all the details with respect to the Rehab component and Free Sale component</fullName>
            </value>
            <value>
                <fullName>All other permissions required as per the CC conditions and IOD conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>